--- a/Formato Memoria/memoria.tex
+++ b/Formato Memoria/memoria.tex
@@ -275,19 +275,6 @@ Dedicado a Patricia Manríquez Lisboa y Sergio Sepúlveda Leal, mis padres.
 \subfile{Capitulo7/7_Conclusion}
 
 
-	
-
-
-
-
-
-
-
-
-
-
-
-
 %\subsection{La primera subsección de la primera sección del capítulo 1}
 %\subfile{1_Descripcion_del_proyecto/1_Conceptos_basicos}
 %Aquí va el texto de la primera subsección de la primera sección del capítulo 1... 
@@ -352,11 +339,14 @@ Dedicado a Patricia Manríquez Lisboa y Sergio Sepúlveda Leal, mis padres.
 
 \appendix{Encuesta a representantes de las OE}
 \label{sec: Anexo_B}
-
 	\section{Sección de preguntas generales sobre el sistema}
 	\subfile{Anexo2/Anexo_B_General_Sistema}
 	\include{Anexo2/Anexo_B_Funcionalidad}
 	\include{Anexo2/Anexo_B_Usabilidad}
+
+\appendix{Funcionalidades extras}
+\label{sec: Anexo_C}
+	\subfile{Anexo3/Anexo_C_FuncionalidadesExtra}
 
 
 %% fin
