--- a/Formato Memoria/Agradecimientos.tex
+++ b/Formato Memoria/Agradecimientos.tex
@@ -1,24 +1,24 @@
 
 \begin{acknowledgment}
-    En primer lugar, quiero agradecer a Rodrigo Paredes por aceptarme como su estudiante memorista, el cual me entrego todo su apoyo y disposición en la culminación de este gran proceso que he realizado en mi vida. En todo momento me oriento, aconsejo y ayudo para que los resultados obtenidos fueran de calidad.
+    En primer lugar, quiero agradecer a Rodrigo Paredes por aceptarme como su estudiante memorista, el cual me entregó todo su apoyo y disposición en la culminación de este gran proceso que he realizado en mi vida. En todo momento me orientó, aconsejó y ayudó para que los resultados obtenidos fueran de calidad.
     
     A Ruth Garrido, por aconsejarme y querer la mejor opción para salir adelante en este gran desafío de mi vida. Por su preocupación y apoyo en grandes dificultades que viví dentro de la carrera.
     
-    A Marcela Pacheco, por su gran labor en apoyarme con las gestiones académicas que muchas veces son demasiado complicadas. Por esas gratas conversaciones que siempre nos ayudaban salir de todo el estrés y nos alegraba la tarde.
+    A Marcela Pacheco, por su gran labor en apoyarme con las gestiones académicas que muchas veces son demasiado complicadas. Por esas gratas conversaciones que siempre me ayudaban salir de todo el estrés y nos alegraba la tarde.
     
-    Agradezco a estas dos grandes mujeres que me apoyaron cuando fui dirigente estudiantil, entregando todo su esfuerzo, disposición, pasión y organización para las distintas actividades que realizábamos como Centro de Alumnos fueran las mejores y además disfrutadas por todos los estudiantes de la carrera.
+    Agradezco a estas dos grandes mujeres que me apoyaron cuando fuí dirigente estudiantil, entregando todo su esfuerzo, disposición, pasión y organización para las distintas actividades que realizábamos como Centro de Alumnos fueran las mejores y además disfrutadas por todos los estudiantes de la carrera.
     
     A Cristina Reyes que ha sido un pilar fundamental en todo instante, apoyándome, alentándome a seguir luchando por cumplir mis sueños, sobre todo cuando estaba todo cuesta arriba y desorientado. Gracias por su carisma, su entusiasmo y por los abrazos que me daba cuando más lo necesitaba, compartiendo también mis logros y alegrías. Muchas gracias por todo.
     
     A los profesores José Letelier, Rodolfo Allende, Ruth Garrido, Federico Meza, Luis Silvestre y Yamisleydi Salgueiro por confiar en mis capacidades y darme la oportunidad de cumplir uno de mis grandes logros de ser ayudante y poder entregar mis conocimientos a los alumnos.
 
-    A Fernanda Arenas que, si bien al inicio de la carrera nuestro compañerismo no fue del todo bueno, con el tiempo logramos ser los mejores amigos. Logré salir adelante arriesgándolo todo por como lo fue en Física, que lo vivimos al extremo y un sin fin de módulos que tuvimos en conjunto a pesar de las diferentes carreras que estudiamos. De verdad que fueron aventuras extremas que, al recordarlas, son grandes anécdotas por las cuales nos reímos y disfrutamos.
+    A Fernanda Arenas que, si bien al inicio de la carrera nuestro compañerismo no fue del todo bueno, con el tiempo logramos ser los mejores amigos. Logramos salir adelante arriesgándolo todo por como lo fue en Física, que lo vivimos al extremo y asi en muchos de los módulos que tuvimos en conjunto a pesar de las diferentes carreras que estudiamos. De verdad que fueron aventuras extremas que, al recordarlas, son grandes anécdotas por las cuales nos reímos y disfrutamos.
     
     A Daniela Paredes, quien conocí a mitad de carrera y de ahí no nos separamos más. Al igual que con Fernanda, vivimos al extremo y estudiando hasta las últimas etapas a pesar de todas las trabas que se nos ponían en el camino. También por el gran apoyo que me brindó cuando fuimos dirigentes en el Centro de Alumnos y por lograr nuestra meta que era unir a la carrera.
     
-    Gracias al apoyo, compañerismo, amistad, lealtad y trabajo en equipo de estas dos grandes profesionales, he logrado salir adelante de muchas batallas que daba por pedido, ustedes siempre estuvieron ahí cuando más lo necesitaba.
+    Gracias al apoyo, compañerismo, amistad, lealtad y trabajo en equipo de estas dos grandes profesionales, he logrado salir adelante de muchas batallas que daba por perdido, ustedes siempre estuvieron ahí cuando más lo necesitaba.
     
-    A Patricio Castro que es ha sido un gran amigo y compañero en todo mi proceso universitario y esos largos viajes que realizábamos para llegar a la universidad y también para volver a nuestros respectivos hogares. También por todo el apoyo y animo que me brindaba.
+    A Patricio Castro que  ha sido un gran amigo y compañero en todo mi proceso universitario y esos largos viajes que realizábamos para llegar a la universidad y también para volver a nuestros respectivos hogares. También por todo el apoyo y ánimo que me brindaba.
     
     A mi hermano Gregory Sepúlveda por aguantarme cuando estudiaba y soñaba con la materia, mis momentos de estrés pero también por compartir mis logros y alegrías. 
     
