--- a/Formato Memoria/Anexo3/Anexo_C_FuncionalidadesExtra.tex
+++ b/Formato Memoria/Anexo3/Anexo_C_FuncionalidadesExtra.tex
@@ -7,7 +7,7 @@
 \begin{figure}[h]
     \centering
     \includegraphics[width=1\textwidth]{Imagenes/CRUDVicerrectores.PNG}
-    \caption{\label{fig: CRUDVicerrectores}Vista para gestionar a los usuarios vicerectores.}
+    \caption{\label{fig: CRUDVicerrectores}Vista para gestionar a los usuarios vicerrectores.}
 \end{figure}
 
 \begin{figure}[h]
@@ -19,31 +19,31 @@
 \begin{figure}[h]
     \centering
     \includegraphics[width=1\textwidth]{Imagenes/CRUDRepresentante.PNG}
-    \caption{\label{fig: CRUDRepresentante}Vista para gestionar a los usuarios representates.}
+    \caption{\label{fig: CRUDRepresentante}Vista para gestionar a los usuarios representantes.}
 \end{figure}
 
 \begin{figure}[h]
     \centering
     \includegraphics[width=1\textwidth]{Imagenes/CRUDCampus.PNG}
-    \caption{\label{fig: CRUDCampus}Vista para gestionar a los distintos campus perteneciente a la Universidad.}
+    \caption{\label{fig: CRUDCampus}Vista para gestionar a los distintos campus pertenecientes a la Universidad.}
 \end{figure}
 
 \begin{figure}[h]
     \centering
     \includegraphics[width=1\textwidth]{Imagenes/CRUDInstituciones.PNG}
-    \caption{\label{fig: CRUDInstituciones}Vista para gestionar las distintas instituciones perteneciente a la Universidad.}
+    \caption{\label{fig: CRUDInstituciones}Vista para gestionar las distintas instituciones pertenecientes a la Universidad.}
 \end{figure}
 
 \begin{figure}[h]
     \centering
     \includegraphics[width=1\textwidth]{Imagenes/CRUDTipoOE.PNG}
-    \caption{\label{fig: CRUDTipoOE}Vista para gestionar las distintos tipos de OE perteneciente a la Universidad.}
+    \caption{\label{fig: CRUDTipoOE}Vista para gestionar las distintos tipos de OE pertenecientes a la Universidad.}
 \end{figure}
 
 \begin{figure}[h]
     \centering
     \includegraphics[width=1\textwidth]{Imagenes/CRUDOE.PNG}
-    \caption{\label{fig: CRUDOE}Vista para gestionar las distintas OE perteneciente a la Universidad.}
+    \caption{\label{fig: CRUDOE}Vista para gestionar las distintas OE pertenecientes a la Universidad.}
 \end{figure}
 
 \begin{figure}[h]
@@ -55,7 +55,7 @@
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.5\textwidth]{Imagenes/EditarPerfilClave.PNG}
-    \caption{\label{fig: EditarPerfilClave}Botones para acceder a editar el perfil del usuario en sesión o la modificacion de la clave.}
+    \caption{\label{fig: EditarPerfilClave}Botones para acceder a editar el perfil del usuario en sesión o la modificación de la clave.}
 \end{figure}
 
 \begin{figure}[h]
@@ -73,5 +73,5 @@
 \begin{figure}[h]
     \centering
     \includegraphics[width=1\textwidth]{Imagenes/PrincipalVicerector.PNG}
-    \caption{\label{fig: PrincipalVicerector}Vista principal que visualiza el vicerector, en donde se encuentra un listado de las OE que tiene a su cargo.}
+    \caption{\label{fig: PrincipalVicerector}Vista principal que visualiza el vicerrector, en donde se encuentra un listado de las OE que tiene a su cargo.}
 \end{figure}
