--- a/Formato Memoria/Capitulo1/1.1_Contexto.tex
+++ b/Formato Memoria/Capitulo1/1.1_Contexto.tex
@@ -7,17 +7,17 @@ Para la realización de estas actividades se debe seguir un procedimiento, el cu
 
     Sólo el Presidente, Tesorero o Secretario de finanzas de la Federación (Fedeut) respectiva o uno de Grupos Intermedios respectivo pueden solicitar por escrito Fondos para realizar actividades. Esta solicitud se envía a quien dirige la Dirección de Apoyo a Actividades Estudiantiles (DAAE), de la Vicerrectoría de Desarrollo Estudiantil (VDE), al menos 20 días antes del inicio de la actividad. 
 
-    Quien dirige la DAAE, una vez que verifica la solicitud enviada por Fedeut o Grupo Intermedio y una vez aprobada, realiza y envía otra solicitud a quien dirige la VDE.
+    Quien dirige la DAAE, una vez que verifica la solicitud enviada por Fedeut o Grupo Intermedio y, una vez aprobada, realiza y envía otra solicitud a quien dirige la VDE.
 
     Luego de que quien dirige la VDE verifica y aprueba la solicitud de Fondo, emite una Resolución Exenta en original y cuatro copias las cuales son enviadas a Contraloría de la Universidad de Talca para su respectivo control de legalidad. 
     
-    Una vez tramitado el acto administrativo, se debe distribuir los documentos anteriormente mencionados de la siguiente forma: 
+    Una vez tramitado el acto administrativo, se deben distribuir los documentos anteriormente mencionados de la siguiente forma: 
 
     \begin{itemize}
         \item La Secretaría General archiva la documentación original.
         \item La primera copia es enviada al Departamento de Tesorería y Presupuesto.
         \item La segunda para el archivo de la Vicerrectoría Estudiantil.
-        \item La tercera es enviada a la Federación o Grupo Intermedio interesada.
+        \item La tercera es enviada a la Federación o Grupo Intermedio interesado.
         \item La cuarta es enviada a la Unidad de Gobierno Transparente.
     \end{itemize}
 
