--- a/Formato Memoria/Capitulo1/1.2_Definicion_Problema.tex
+++ b/Formato Memoria/Capitulo1/1.2_Definicion_Problema.tex
@@ -1,7 +1,7 @@
 Tras lo expuesto en la sección anterior, las dificultades surgen en la manera de realizar la rendición, debido a que cuando ésta es creada por el solicitante, no existe ningún método que valide su correcta realización, sino que una vez enviada y revisada por contraloría se obtiene una respuesta. Si esta última es negativa, la entrega del dinero por anticipado o su reembolso posterior, según sea el caso, tarda más de lo planificado.
 
-Por otro lado, el departamento de contraloría se encuentra en Talca y se debe enviar la documentación por valija desde Curicó hasta aquel lugar. Por lo tanto, se pierde tiempo en enviar la documentación y en esperar a que controlaría lo revise. Es más, en la práctica no siempre envían un reporte completo de los errores que tiene la rendición. En efecto, en algunos casos notifican los errores individualmente lo que enlentece mucho el proceso.
+Por otro lado, el departamento de contraloría se encuentra en Talca y se debe enviar la documentación por valija desde Curicó hasta aquel lugar. Por lo tanto, se pierde tiempo en enviar la documentación y en esperar a que controlaría lo revise. Es más, en la práctica, no siempre envían un reporte completo de los errores que tiene la rendición. En efecto, en algunos casos notifican los errores individualmente lo que enlentece el proceso.
 
 Finalmente, cabe destacar que la Federación o CCAA a través de su Presidente o Secretario de Finanzas \footnote{Algunas veces este cargo se llama Tesorero} pueden realizar una solicitud de fondo, por lo que si se quiere realizar otra actividad y solicitar fondos a la universidad, se debe esperar a que no existan rendiciones pendientes, lo que podría redundar en la no realización de algún evento posterior por meras razones administrativas.
 
-Es por esto que en este trabajo de título se va a abordar el problema, sistematizándolo para aminorar la dificultad del proceso de solicitud de fondos en acuerdo a la RU N\grad 2083 del año 2017. Adicionalmente, también se va abordar la confección de la solicitud de fondo por rendir ya que este proceso está altamente ligado a la rendición del fondo.
+Es por esto que en este trabajo de título se va a abordar el problema, sistematizándolo, para aminorar la dificultad del proceso de solicitud de fondos en acuerdo a la RU N\grad 2083 del año 2017. Adicionalmente, también se va abordar la confección de la solicitud de fondo por rendir ya que este proceso está altamente ligado a la rendición del fondo.
