--- a/Formato Memoria/Capitulo1/1.3_Presentacion_Solucion.tex
+++ b/Formato Memoria/Capitulo1/1.3_Presentacion_Solucion.tex
@@ -1,4 +1,4 @@
-En base al problema descrito anteriormente es que nace este proyecto el cual consiste en implementar un sistema web que permita a las distintas O.E. la confección de solicitudes de fondos por rendir y su posterior rendición, de acuerdo a lo estipulado por la RU N\grad 2083 del año 2017. Cabe señalar que esta RU señala los posibles errores por los cuales una rendición pueda ser rechazada, como por ejemplo, montos superiores a lo solicitado o boletas fuera del plazo en que se realiza la actividad, entre otros.
+En base al problema descrito anteriormente es que nace este proyecto el cual consiste en implementar un sistema web que permita a las distintas O.E. la confección de solicitudes de fondos por rendir y su posterior rendición, de acuerdo a lo estipulado por la RU N\grad 2083 del año 2017. Cabe señalar que esta RU señala los posibles errores por los cuales una rendición pueda ser rechazada, como por ejemplo, montos superiores a lo solicitado o, boletas fuera del plazo en que se realiza la actividad, entre otros.
 
 Dentro de las ventajas de contar con esta herramienta se tienen las siguientes:
 
