--- a/Formato Memoria/Capitulo1/1.6_Limitaciones.tex
+++ b/Formato Memoria/Capitulo1/1.6_Limitaciones.tex
@@ -3,5 +3,5 @@ Dentro de las limitaciones del sistema, se tienen las siguientes:
 \begin{itemize}
     \item El sistema opera bajo la RU N\grad 2083 del año 2017.
     
-    \item Esta aplicación se excluyen los Grupos Intermedios.
+    \item En esta aplicación se excluyen a los Grupos Intermedios.
 \end{itemize}
