--- a/Formato Memoria/Capitulo1/1_Introduccion.tex
+++ b/Formato Memoria/Capitulo1/1_Introduccion.tex
@@ -1,1 +1,1 @@
-Las \emph{Organizaciones Estudiantiles(OEs)} de la Universidad de Talca son las encargadas de gestionar muchas actividades para la comunidad estudiantil, tales como la bienvenida de alumnos nuevos, aniversario de carrera, o actividades culturales y deportivas, entre otras. Para ello, dada una actividad, se debe realizar un conjunto de procedimientos tales como la aprobación una de \emph{Solicitud}, envío de su \emph{Resolución Universitaria} y su \emph{Rendiciones de Cuentas}, entre otros. Uno de los procesos más engorrosos es la rendición de cuentas, que es justamente el foco de esta propuesta. En efecto, dado lo engorroso de este proceso, en la práctica se suelen cometer muchos errores pues, por falta de experiencia o por el apuro por cumplir los plazos, es posible incumplir con los requerimientos establecidos por la Universidad a la hora de realizar el detalle y acreditación de los gastos en las actividades realizadas por las OEs. Por lo tanto, en las siguientes páginas se muestra la propuesta de solución para el problema de efectuar correctamente las rendiciones de cuentas, en donde se puede observar los \emph{Conceptos Básicos del Proyecto}, el \emph{Contexto de trabajo} de las OEs, la \emph{Descripción del Problema} y \emph{Trabajos Relacionados}, entre otros.
+Las \emph{Organizaciones Estudiantiles(OEs)} de la Universidad de Talca son las encargadas de gestionar muchas actividades para la comunidad estudiantil, tales como la bienvenida de alumnos nuevos, aniversario de carrera, o actividades culturales y deportivas, entre otras. Para ello, dada una actividad, se debe realizar un conjunto de procedimientos tales como la aprobación de la \emph{Solicitud}, envío de su \emph{Resolución Universitaria} y su \emph{Rendiciones de Cuentas}, entre otros. Uno de los procesos más engorrosos es la rendición de cuentas, que es justamente el foco de esta propuesta. En efecto, dado lo engorroso de este proceso, en la práctica se suelen cometer muchos errores pues, por falta de experiencia o por el apuro por cumplir los plazos, es posible incumplir con los requerimientos establecidos por la Universidad a la hora de realizar el detalle y acreditación de los gastos en las actividades realizadas por las OEs. Por lo tanto, en las siguientes páginas se muestra la propuesta de solución para el problema de efectuar correctamente las rendiciones de cuentas, en donde se puede observar los \emph{Conceptos Básicos del Proyecto}, el \emph{Contexto de trabajo} de las OEs, la \emph{Descripción del Problema} y \emph{Trabajos Relacionados}, entre otros.
