--- a/Formato Memoria/Capitulo2/2.1.1_Conceptos.tex
+++ b/Formato Memoria/Capitulo2/2.1.1_Conceptos.tex
@@ -86,7 +86,7 @@ Para mayor comprensión del \emph{Contexto del problema} esbozado en la \textbf{
     \item total de reembolso.
   \end{enumerate*}
   
-  Por último, debe ir la firma del responsable de la rendición y junto con ello debe ir el nombre, el cargo que tiene en la organización y en caso de ser un CAA indicar el nombre de la carrera, si no a la facultad, que pertenece.
+  Por último, debe ir la firma del responsable de la rendición y junto con ello debe ir el nombre, el cargo que tiene en la organización y en caso de ser un CAA indicar el nombre de la carrera, si no a la facultad que pertenece.
   
   Por otra parte, se deben adjuntar los documentos originales que se encuentran en la rendición. En caso de tener gastos superiores a 3 UTM se deben adjuntar tres cotizaciones ~\cite{5}.
   
