--- a/Formato Memoria/Capitulo2/2.2_Tecnologias_Utilizadas.tex
+++ b/Formato Memoria/Capitulo2/2.2_Tecnologias_Utilizadas.tex
@@ -4,7 +4,7 @@ Para entrar un poco más en detalle, se da a conocer pequeñas descripciones de 
 
 \begin{itemize}
     \item   \begin{description}
-                \item[HTML-Razor:] HTML es un lenguaje de marcado de hipertextos el cual dispone de un conjunto de etiquetas que son insertadas en un documento que puede mostrar la información a través de un navegador web. Este cuenta además con Razor, que es una sintaxis basada en C\# que permite usarse como motor de programación en las vistas HTML. 
+                \item[HTML-Razor:] HTML es un lenguaje de marcado de hipertexto el cual dispone de un conjunto de etiquetas que son insertadas en un documento que puede mostrar la información a través de un navegador web. Este cuenta además con Razor, que es una sintaxis basada en C\# que permite usarse como motor de programación en las vistas HTML. 
             \end{description}
 
     \item   \begin{description}
