--- a/Formato Memoria/Capitulo2/2.3_Metodologia_desarrollo.tex
+++ b/Formato Memoria/Capitulo2/2.3_Metodologia_desarrollo.tex
@@ -1,4 +1,4 @@
-La palabra metodología está compuesta por tres vocablos griegos, los cuales son: metá (``más allá''), odós (``camino'') y logos (``estudio''). Es por ello que del conjunto de medios que se pueden utilizar para conseguir un objetivo, una metodología determina cuales son los más adecuados.
+La palabra metodología está compuesta por tres vocablos griegos, los cuales son: \textit{metá} (``más allá''), \textit{odós} (``camino'') y \textit{logos} (``estudio''). Es por ello que del conjunto de medios que se pueden utilizar para conseguir un objetivo, una metodología determina cuales son los más adecuados.
 
 Las metodologías de desarrollo de software ayudan a estructurar, planificar y controlar el proceso de desarrollo de los sistemas de información, con el objetivo de resolver las siguientes preguntas:
 
