--- a/Formato Memoria/Capitulo4/4.2_Modelos_Contexto_Solicitud.tex
+++ b/Formato Memoria/Capitulo4/4.2_Modelos_Contexto_Solicitud.tex
@@ -87,7 +87,7 @@ Cabe destacar que no es el único proceso en el cual las OEs realizan declaracio
 \begin{figure}[tb!]
     \hspace{-9mm}
     \includegraphics[width=1.1\textwidth]{Imagenes/Solicitud_CCAA_Reembolso.png}
-    \caption{\label{fig: Solicitud_CAA_Reembolso}Proceso fondos con Solicirud de Reembolso por parte de un CAA.}
+    \caption{\label{fig: Solicitud_CAA_Reembolso}Proceso fondos con Solicitud de Reembolso por parte de un CAA.}
 \end{figure}
 
 \begin{figure}[tb!]
