--- a/Formato Memoria/Capitulo6/6.2_Aplicacion_Obtenida.tex
+++ b/Formato Memoria/Capitulo6/6.2_Aplicacion_Obtenida.tex
@@ -8,7 +8,7 @@ A continuación se describe el producto obtenido, siguiendo las diferentes fases
     \caption{\label{fig: Login}Vista de ingreso al sistema.}
 \end{figure}
 
-\paragraph{Recuperación de acceso a una cuenta de una OE: } Solicitud de una nueva clave de acceso en caso de que el usuario la olvide, ingresando el correo su cuenta registrada. Una vez validada esta información se solicita la recuperación de cuenta al servidor, el cual envía un correo con la nueva clave de acceso al usuario (vea \textbf{Figura \ref{fig: RecuperarClave}}).
+\paragraph{Recuperación de acceso a una cuenta de una OE: } Solicitud de una nueva clave de acceso en caso de que el usuario la olvide, ingresando el correo registrado en cuenta. Una vez validada esta información se solicita la recuperación de cuenta al servidor, el cual envía un correo con la nueva clave de acceso al usuario (vea \textbf{Figura \ref{fig: RecuperarClave}}).
 
 \begin{figure}[htbp]
     \centering
@@ -82,7 +82,7 @@ A continuación se describe el producto obtenido, siguiendo las diferentes fases
         \caption{\label{fig: RendicionPersonas}Vista que muestra el resumen de los documentos declarados por cada participante y los gastos comunes.}
     \end{figure}
 
-    \subparagraph{\emph{Documentos de una persona: }} Tras seleccionar a la persona en el \textit{Resumen de los gastos realizados por personas} se procede a mostrar en detalle los documentos que se han registrado de esta y, además se muestran indicadores que ayudan a analizar cuanto es la suma total de los documentos registrados para la declaración de gasto, cuanto es la suma total de los documentos seleccionados a rendir, cuanto es la suma de los documentos registrado para declarar del participante y cuanto es la suma de los documentos que se han seleccionado para declarar del participante (vea \textbf{Figura \ref{fig: DocumentosParticipante}}). Esta funcionalidad de la aplicación ayuda a resolver el problema \textbf{PBLM-3}.
+    \subparagraph{\emph{Documentos de una persona: }} Tras seleccionar a la persona en el \textit{Resumen de los gastos realizados por personas} se procede a mostrar en detalle los documentos que se han registrado de esta y, además se muestran indicadores que ayudan a analizar cuánto es la suma total de los documentos registrados para la declaración de gasto, cuánto es la suma total de los documentos seleccionados a rendir, cuánto es la suma de los documentos registrado para declarar del participante y cuánto es la suma de los documentos que se han seleccionado para declarar del participante (vea \textbf{Figura \ref{fig: DocumentosParticipante}}). Esta funcionalidad de la aplicación ayuda a resolver el problema \textbf{PBLM-3}.
 
     
     \begin{figure}[htbp]
@@ -141,7 +141,7 @@ A continuación se describe el producto obtenido, siguiendo las diferentes fases
         \end{tabular}
     \end{table}
 
-Adicionalmente se crean las funcionalidades de crear, modificar, eliminar y listar de los siguientes item:
+Adicionalmente se crean las funcionalidades de crear, modificar, eliminar y listar de los siguientes ítem:
 \begin{itemize}
     \item Usuario:
     \begin{itemize}
