--- a/Formato Memoria/Capitulo6/6.4_Resultados.tex
+++ b/Formato Memoria/Capitulo6/6.4_Resultados.tex
@@ -12,13 +12,13 @@ Por último, 12 de 16 encuestados indican que la aplicación ayudaría a reducir
 
 \paragraph{Sección de preguntas sobre las funcionalidades del sistema}
 
-12 de 16 representantes de las OE indican que las funcionalidades del sistema son suficientes para que la aplicación sea útil para ellos. Por otra parte, al momento de realizar las pruebas existieron fallas al realizar una declaración de gastos, las cuales fueron resueltas con posterioridad. Sin embargo, el 11 de 16 representantes indica que la aplicación logra realizar una declaración de gastos fiable, mientras que el resto indica que solo a veces.
+12 de 16 representantes de las OE indican que las funcionalidades del sistema son suficientes para que la aplicación sea útil para ellos. Por otra parte, al momento de realizar las pruebas existieron fallas al realizar una declaración de gastos, las cuales fueron resueltas con posterioridad. Sin embargo, el 11 de 16 representantes indica que la aplicación logra realizar una declaración de gastos fiable, mientras que el resto indica que sólo a veces.
 
 \paragraph{Sección de preguntas sobre usabilidad e interfaz de usuario}
 
-13 de 16 representantes indican que la aplicación es fácil de usar y que no requiere de instrucciones previas, mientras que el resto indican un pequeño desacuerdo. Por otra parte, 14 de 16 usuarios indican que la distribución de los elementos en la pantalla es adecuada, mientras que el resto está de acuerdo entre un 60\% y 80\%.
+13 de 16 representantes indican que la aplicación es fácil de usar y que no requiere de instrucciones previas, mientras que el resto indican un pequeño desacuerdo. Por otra parte, 14 de 16 usuarios indican que la distribución de los elementos en la pantalla es adecuada, mientras que, los dos usuarios restantes, sólo coinciden entre un 60\% y 80\%.
 
-Por último, 12 de 16 representantes indican que el proceso completo de realizar una Solicitud de Fondo es claro, mientras que el resto indica que la claridad de este proceso es entre un 60\% y 80\%.
+Por último, 12 de 16 representantes indican que el proceso completo de realizar una Solicitud de Fondo es claro, mientras que el resto de los usuarios indican que la claridad de este proceso es entre un 60\% y 80\%.
 
 Para más detalle sobre la encuesta realizada, se puede consultar en el \textbf{Anexo \ref{sec: Anexo_B}}.
 
