--- a/Formato Memoria/Resumen.tex
+++ b/Formato Memoria/Resumen.tex
@@ -3,7 +3,7 @@
     %Marco general: 2 a 3 lineas contando el marco general, contexto o motivacion del problema.
     
     %Definicion o planteamiento del problema: 3 a 5 lineas en donde cuentan cual es el problema que efectivamente estas enfrentando.
-    Las Organizaciones Estudiantiles (OEs) de la Universidad de Talca se encargan de gestionar muchas actividades tales como la bienvenida de los alumnos de primer año o el aniversario de carrera, entre otras. Dado lo anterior, la casa de Estudio en su plan estratégico \emph{Visión 2020} destaca el apoyo a estas actividades aportando monetariamente para su gestión. Pero al momento de dar cuentas de los gastos del evento, si es rechazada por Tesorería a la hora de ser revisado, esta no envía una notificación con todos los errores, sino que usualmente notifica sólo el primer error detectado provocando el retraso tanto del reembolso del dinero como de otras actividades planificadas por la OE. Por consecuencia, no se pueden realizar nuevas Solicitudes de Fondos por parte de la OE mientras no culmine la Rendición pendiente.
+    Las Organizaciones Estudiantiles (OEs) de la Universidad de Talca se encargan de gestionar muchas actividades, tales como la bienvenida de los alumnos de primer año o el aniversario de carrera, entre otras. Dado lo anterior, la casa de Estudio en su plan estratégico \emph{Visión 2020} destaca el apoyo a estas actividades aportando monetariamente para su gestión. Pero, al momento de dar cuentas de los gastos del evento, si es rechazada por Tesorería a la hora de ser revisado, esta no envía una notificación con todos los errores, sino que usualmente notifica sólo el primer error detectado provocando el retraso tanto del reembolso del dinero como de otras actividades planificadas por la OE. Por consecuencia, no se pueden realizar nuevas Solicitudes de Fondos por parte de la OE mientras no culmine la Rendición pendiente.
 
 
     
