--- a/Formato Memoria/Capitulo5/5.6_Algoritmo.tex
+++ b/Formato Memoria/Capitulo5/5.6_Algoritmo.tex
@@ -1,27 +1,27 @@
-Uno de los grandes problemas que se pretende resolver en esta memoria es, disminuir el tiempo en escoger la cantidad de documentación que se tienen para realizar la rendición y que se ajuste al monto solicitado.
+Uno de los grandes problemas que se pretende resolver en esta memoria es disminuir el tiempo en escoger la cantidad de documentación que se tienen para realizar la rendición y que se ajuste al monto solicitado.
 
 Inicialmente, se tiende a resolver esta problematica por Fuerza Bruta~\cite{22}, el cual busca todas las posibles combinaciones y obtiene la mejor opción. Para ello se debe considerar lo siguiente:
 
 \begin{itemize}
     \item $A$ es el conjunto de $n$ documentos que se tiene para realizar una rendición.
     \item Se debe obtener el conjunto de potencia de $A$ el cual se denomina $\mathcal{P}(A)$ y está formado por todos los subconjuntos de $A$.
-    \item Para cada subconjunto de $A$, cada elemento de $A$ tiene dos opciones; \textit{pertenece} o \textit{no pertenece}. Por lo tanto, el número de subconjunto de $A$ es: $\underbrace{2\cdot \ldots \cdot 2}_{n\mbox{ veces }}=2^n$.
+    \item Para cada subconjunto de $A$, cada elemento de $A$ tiene dos opciones; \textit{pertenece} o \textit{no pertenece}. Por lo tanto, el número de subconjuntos de $A$ es: $\underbrace{2\cdot \ldots \cdot 2}_{n\mbox{ veces }}=2^n$.
     \item Tras obtener $\mathcal{P}(A)$, se debe encontrar todos aquellos subconjuntos tal que, su peso, sea menor a la capacidad $W$ de la mochila y que maximice el valor o beneficio.
 \end{itemize}
 
 Sin embargo, el algoritmo que se diseñe para cumplir los puntos mencionados, tiene un tiempo de ejecución de $O(2^n)$ para obtener la solución óptima. Se sabe que, cualquier algoritmo que tenga tiempo mayor al polinomial (como es en este caso que es exponencial), no es posible implementarlo para problemas que tengan grandes valores de $n$.
 
-Otra solución es resolver el problema con programación dinámica para mejorar su desempeño y dado que, tiene un parecido al problema de la mochila~\cite{22} el cual dice, “Dada una serie de elementos (cada uno con un valor $p$ y un peso $w$), empacar una mochila que soporta un peso máximo $W$ con la finalidad de maximizar el valor de los elementos empacados”. Existen dos versiones del problema:
+Otra solución es resolver este problema con programación dinámica para mejorar su desempeño aprovechando que tiene un parecido al problema de la mochila~\cite{22} el cual dice, “Dada una serie de elementos (cada uno con un valor $p$ y un peso $w$), empacar una mochila que soporta un peso máximo $W$ con la finalidad de maximizar el valor de los elementos empacados”. Existen varias versiones del problema, entre ellas:
 
 \begin{itemize}
-    \item \textbf{0-1:} Los elementos no se pueden dividir y solo pueden colocar (1) o no colocar (0) dentro de la mochila.
+    \item \textbf{0-1:} Los elementos no se pueden dividir y sólo pueden colocar (1) o no colocar (0) dentro de la mochila.
     \item \textbf{Fraccional:} Se pueden tomar valores se pueden dividir para llenar la mochila.
 \end{itemize}
 
-Ahora, dado que los documentos en una Rendición no se pueden dividir, esta memoria se centra en la versión del problema 0-1 y, para definir el problema de una manera mas formal, se puede decir que:
+Ahora, dado que los documentos en una Rendición no se pueden dividir, esta memoria se centra en la versión del problema 0-1. Para definir el problema de una manera más formal, se puede decir que:
 
 \begin{itemize}
-    \item Se tiene una mochila con capacidad máxima $W$, y un conjunto $S$ de $n$ elementos.
+    \item Se tiene una mochila con capacidad máxima $W$ y un conjunto $S$ de $n$ elementos.
     \item Cada elemento $i$ tiene un peso $w_i$ y un valor o beneficio $b_i$ ($w_i$ y W son de tipo entero para acercarlo a la problemática de selección de documentación de la Rendición).
     \item \textbf{Problema:} ¿Qué elementos guardar en la mochila para obtener un máximo valor o beneficio total?
 \end{itemize}
@@ -42,18 +42,18 @@ Para ello se tiene que identificar la ecuación recursiva que asocie el problema
 Esto significa que, el mejor subconjunto $S_i$ que tiene un peso total $w$ es:
 
 \begin{enumerate}
-    \item El mejor subconjunto $S_{i-1}$ que tiene un peto total menor o igual a $w$.
+    \item El mejor subconjunto $S_{i-1}$ que tiene un peso total menor o igual a $w$.
     \item El mejor subconjunto $S_{i-1}$ que tiene un peso total menor o igual a $w-w_i$ más el valor o beneficio del elemento $i$.
 \end{enumerate}
 
-Dicho de otra forma, tenemos lo siguiente:
+Dicho de otra forma, se tiene lo siguiente:
 \begin{itemize}
     \item El mejor subconjunto $S_i$ que tiene peso total menor o igual a $w$, contiene el elemento $i$ o no.
     \item Primer caso ($w_i>w$): El elemento $i$ no puede ser parte de la solución, porque si lo fuera, el peso total seria mayor que $w$, lo cual no es aceptable.
-    \item Segundo caso ($w_i \leq w$): El elemento $i$ \underline{puede} estar en la solución, y escogemos el caso con el mayor valor.
+    \item Segundo caso ($w_i \leq w$): El elemento $i$ \underline{puede} estar en la solución, y se escoge el caso con el mayor valor.
 \end{itemize}
 
-Dado lo anterior, se implementa el \textbf{Algoritmo \ref{fig: algortimoMochila}} para resolver el problema con un tiempo de ejecución $O(n*W)$ que podemos compararlo como $O(n^2)$, dado que es la multiplicación de dos variables y es polinomial, cumpliendo así con el principio de la optimalidad.
+Dado lo anterior, se implementa el \textbf{Algoritmo \ref{fig: algortimoMochila}} para resolver el problema con un tiempo de ejecución $O(n \cdot W)$ que se puede considerar como $O(n^2)$, dado que es la multiplicación de dos variables y es polinomial, cumpliendo así con el principio de la optimalidad.
 
 
 \renewcommand{\algorithmicrequire}{\textbf{Entrada:}}
@@ -119,9 +119,9 @@ Dado lo anterior, se implementa el \textbf{Algoritmo \ref{fig: algortimoMochila}
 \end{algorithm}
 
 
-Tras lo expuesto, se aprecia que este algoritmo se ajusta mucho al problema que plantea resolver esta memoria, en donde la capacidad máxima que tiene la mochila ($W$), es el monto que se solicita para desarrollar una actividad y, los elementos ($i$), son los documentos que se deben evaluar para comprobar si se pueden colocar en la mochila, según su monto ($w_i$ y $b_i$).
+Tras lo expuesto, se aprecia que este algoritmo se ajusta mucho al problema que plantea resolver esta memoria, en donde la capacidad máxima que tiene la mochila ($W$) es el monto que se solicita para desarrollar una actividad y los elementos ($i$) son los documentos que se deben evaluar para comprobar si se pueden colocar en la mochila, según su monto ($w_i$ y $b_i$).
 
-Sin embargo, el algoritmo solo encuentra el beneficio máximo posible que se puede cargar en la mochila (el valor que se encuentra en $V[n,W]$), es por ello que, para conocer los elementos  que maximizan el valor, se implementa el \textbf{Algoritmo \ref{fig: seleccionDocumentos}}. Dado que, toda la información se encuentra en la matriz ($V$) y se conoce el máximo beneficio ($V[n,W]$) el algoritmo implementa las siguientes condiciones para la selección de documentos que debe ir en la Rendición:
+Sin embargo, el algoritmo sólo encuentra el beneficio máximo posible que se puede cargar en la mochila (el valor que se encuentra en $V[n,W]$), es por ello que, para conocer los elementos  que maximizan el valor, se implementa el \textbf{Algoritmo \ref{fig: seleccionDocumentos}}. Dado que, toda la información se encuentra en la matriz ($V$) y se conoce el máximo beneficio ($V[n,W]$) el algoritmo implementa las siguientes condiciones para la selección de documentos que debe ir en la Rendición:
 
 
 \begin{itemize}
