--- a/Formato Memoria/Capitulo7/7_Conclusion.tex
+++ b/Formato Memoria/Capitulo7/7_Conclusion.tex
@@ -1,12 +1,12 @@
 A través de este documento se dan a conocer el proceso que conlleva el desarrollo de este \textit{Proyecto de Titulación}. En un comienzo se detalla el proceso que se debe realizar en una Solicitud de Fondo por Rendir junto con los conceptos principales que ayudan a la comprensión para el desarrollo de esta memoria. Luego se procede a describir la problemática que busca resolver este proyecto: dado lo engorroso que es la confección y la aceptación de una Rendición, ya que los representantes de las OE no siempre siguen el proceso estipulado para la aceptación y su posterior devolución de dinero que cubren los gastos  incurridos en un evento (ya sea por inexperiencia o falta de claridad en los detalles del proceso), es que se desarrolla un sistema que \textbf{Confecciona solicitudes de fondos por rendir para actividades estudiantiles y las rendiciones de gastos respectivas, de acuerdo con el marco definido por la RU N\grad 2083 del año 2017.}
 
-Esta memoria detalla todo el proceso que conlleva el desarrollo de la aplicación. Esto comienza con la captura de requisitos y la planificación general del proyecto, la cual se modificó dado que surgía problemáticas y/o nuevos requisitos. Luego, tras la planificación se comienza con el diseño de la aplicación y su posterior desarrollo que se realizaban a través de incrementos. Por último, se realizaban las pruebas de los incrementos para verificar si cumplía con el objetivo de cada iteración.
+Esta memoria detalla todo el proceso que conlleva el desarrollo de la aplicación. Esto comienza con la captura de requisitos y la planificación general del proyecto, la cual se modificó dado que surgía problemáticas y/o nuevos requisitos. Luego, tras la planificación, se comienza con el diseño de la aplicación y su posterior desarrollo que se realizaban a través de incrementos. Por último, se realizaban las pruebas de los incrementos para verificar si cumplía con el objetivo de cada iteración.
 
 Por último, se realizan pruebas de Caja Negra para medir los objetivos planteados en este documento. Además, se realizaron pruebas de Usabilidad que debió ser contestado por los representantes de las distintas OE.
 
 Tras realizar las diferentes pruebas a los usuarios de la aplicación, estos indican que la herramienta logra asistir en el proceso de una Solicitud de Fondo por Rendir, reduciendo los posibles errores tales como el ingreso de boletas y/o facturas fuera del periodo del evento, gastos incurridos sin categorización y monto excesivo en comparación al solicitado, entre otros. Esto no implica que el usuario pueda cometer otros errores que produzcan el rechazo de la Rendición, ya que el factor humano no puede ser controlado por la aplicación. 
 
-Para finalizar, este proyecto entrega un sistema funcional el cual puede ser utilizado por los distintos CCAA y la Federación de Estudiantes de la Universidad de Talca, Campus Los Niches, Curicó. Pero además existe trabajo futuro que es posible realizar con este Software los cuales son:
+Para finalizar, este proyecto entrega un sistema funcional el cual puede ser utilizado por los distintos CCAA y la Federación de Estudiantes de la Universidad de Talca, Campus Los Niches, Curicó. Pero además existe trabajo futuro que es posible realizar con este Software, el cual considera:
 
 \begin{itemize}
     \item Implementar el sistema de modo tal que pueda ser utilizado por los diferentes navegadores. Por ejemplo, Safari y Opera, entre otros.
